fix z-index issue with nav on mobile

--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -78,6 +78,7 @@
         top: $headerHeight;
         transition: transform .3s;
         transform: translateY(-100%);
+        z-index: 3;
 
         .nav {
             &__link {
